<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.firebase.codelab.labelScannerUABC.DataEntryActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tituloNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_producto" />

            <EditText
                android:id="@+id/cuerpoNombreProducto"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/nombre_hint"
                android:inputType="text"
                android:padding="5dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/tituloTamPorcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/tamaño_porción" />

                    <EditText
                        android:id="@+id/cuerpoTamPorcion"
                        style="@style/regular_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_rounded_rectangle"
                        android:hint="@string/tamaño_porción"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="8dp">

                    <TextView
                        android:id="@+id/tituloPorciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/porciones_empaque" />

                    <EditText
                        android:id="@+id/cuerpoPorciones"
                        style="@style/regular_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_rounded_rectangle"
                        android:hint="@string/porciones_hint"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tituloCalorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/calorias_porcion" />

            <EditText
                android:id="@+id/cuerpoCalorias"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/calorias_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloGrasaTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/grasaTotal_porcion" />

            <EditText
                android:id="@+id/cuerpoGrasaTotal"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/grasaTotal_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloGrasaSaturada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/grasaSaturada_porcion" />

            <EditText
                android:id="@+id/cuerpoGrasaSaturada"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/grasaSaturada_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloGrasaTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/grasaTrans_porcion" />

            <EditText
                android:id="@+id/cuerpoGrasaTrans"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/grasaTrans_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloCarbohidratos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/carbs_porcion" />

            <EditText
                android:id="@+id/cuerpoCarbohidratos"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/carbs_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloAzucar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/azucares_porcion" />

            <EditText
                android:id="@+id/cuerpoAzucar"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/azucares_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloColesterol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/colesterol_porcion" />

            <EditText
                android:id="@+id/cuerpoColesterol"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/colesterol_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloSodio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sodio_porcion" />

            <EditText
                android:id="@+id/cuerpoSodio"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/sodio_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tituloProteina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/proteinas_porcion" />

            <EditText
                android:id="@+id/cuerpoProteina"
                style="@style/regular_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_rounded_rectangle"
                android:hint="@string/proteinas_hint"
                android:inputType="numberDecimal"
                android:padding="5dp"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/info"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="#00000000"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/acceptButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:src="@drawable/tick"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="25dp"
        app:fabCustomSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
